<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/information"
            android:id="@+id/type_title" android:paddingLeft="16dp" android:paddingRight="16dp"
            android:background="@color/green_light"/>
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:stretchColumns="1">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:orientation="vertical" android:id="@+id/tableRow1">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/date"
                    android:id="@+id/textView2" android:paddingLeft="16dp" android:paddingRight="16dp"
                    android:background="@color/green"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/dialog_date"
                android:text="12 - 31" android:gravity="right" android:background="@color/main_bg"
                android:paddingLeft="16dp" android:paddingRight="16dp"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical"
                  android:id="@+id/tableRow2">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/kind"
                      android:id="@+id/title_kind" android:paddingLeft="16dp" android:paddingRight="16dp"
                      android:background="@color/green"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/dialog_kind"
                      android:text="food" android:gravity="right" android:background="@color/main_bg"
                      android:paddingRight="16dp" android:paddingLeft="16dp"/>
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical"
                  android:id="@+id/tableRow3">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/comment"
                      android:id="@+id/textView" android:paddingLeft="16dp" android:paddingRight="16dp"
                      android:background="@color/green"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/dialog_comment"
                      android:gravity="right" android:background="@color/main_bg" android:paddingLeft="16dp"
                      android:paddingRight="16dp"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/delete"
            android:layout_weight="1"
            android:background="@color/gray"
            android:layout_marginRight="1dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modify"
            android:id="@+id/modify"
            android:layout_weight="1"
            android:background="@color/gray"
            android:layout_marginLeft="1dp"/>
    </LinearLayout>

</LinearLayout>
