<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="250dp"
              android:layout_height="396dp"
              android:id="@+id/big_window_layout"
              tools:context="com.cs.app.momo.Cost" android:orientation="vertical" android:background="@color/transparent"
              android:gravity="center">

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                      android:layout_height="40dp" android:background="@color/green_light"
                      android:id="@+id/linearLayout" android:layout_gravity="bottom">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/quick_add"
                      android:id="@+id/quick_title" android:layout_gravity="center_vertical|left"
                      android:layout_marginLeft="66dp" android:layout_marginRight="16dp" android:textColor="@color/white"
                    />
        </LinearLayout>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageView11" android:src="@drawable/ic_launcher_actionbar"
                android:layout_gravity="center_vertical" android:layout_marginLeft="8dp"/>
    </FrameLayout>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="$"
            android:id="@+id/dollar"
            android:background="@color/white"
            android:gravity="center_vertical|right" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_vertical_margin" android:layout_gravity="center_vertical"
            android:textColor="@color/black" android:textSize="30sp"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true" android:focusableInTouchMode="true" android:background="@color/gray">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="40dp" android:background="@color/green_light">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/category"
                    android:id="@+id/textView"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp" android:textColor="@color/white"/>
        </LinearLayout>
        <Spinner
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:id="@+id/category"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
                />
    </LinearLayout>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06">

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="7"
                    android:id="@+id/seven"
                    android:layout_weight="1" android:background="@color/white" android:textColor="@color/black"/>

            <ImageView
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView" android:background="@color/green_light"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="8"
                    android:id="@+id/eight"
                    android:layout_weight="1" android:background="@color/white" android:textColor="@color/black"/>

            <ImageView android:layout_width="1dp" android:layout_height="fill_parent" android:id="@+id/imageView2" android:background="@color/green_light"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="9"
                    android:id="@+id/nine"
                    android:layout_weight="1" android:background="@color/white" android:textColor="@color/black"/>
        </TableRow>

        <ImageView android:layout_width="fill_parent" android:layout_height="2dp" android:id="@+id/imageView3" android:background="@color/green_light"/>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:id="@+id/tableRow">

            <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="4"
                    android:id="@+id/four"
                    android:layout_weight="1" android:background="@color/white" android:textColor="@color/black"/>

            <ImageView android:layout_width="1dp" android:layout_height="fill_parent" android:id="@+id/imageView6" android:background="@color/green_light"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="5"
                    android:id="@+id/five"
                    android:layout_weight="1" android:background="@color/white" android:textColor="@color/black"/>

            <ImageView android:layout_width="1dp" android:layout_height="fill_parent" android:id="@+id/imageView7" android:background="@color/green_light"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="6"
                    android:id="@+id/six"
                    android:layout_weight="1" android:background="@color/white" android:textColor="@color/black"/>
        </TableRow>

        <ImageView android:layout_width="fill_parent" android:layout_height="2dp" android:id="@+id/imageView4" android:background="@color/green_light"/>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:id="@+id/tableRow2">

            <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="1"
                    android:id="@+id/one"
                    android:layout_weight="1" android:background="@color/white" android:textColor="@color/black"/>

            <ImageView android:layout_width="2dp" android:layout_height="fill_parent" android:id="@+id/imageView8" android:background="@color/green_light"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="2"
                    android:id="@+id/two"
                    android:layout_weight="1" android:background="@color/white" android:textColor="@color/black"/>

            <ImageView android:layout_width="2dp" android:layout_height="fill_parent" android:id="@+id/imageView9" android:background="@color/green_light"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="3"
                    android:id="@+id/three"
                    android:layout_weight="1" android:background="@color/white" android:textColor="@color/black"/>
        </TableRow>

        <ImageView android:layout_width="fill_parent" android:layout_height="2dp" android:id="@+id/imageView5" android:background="@color/green_light"/>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:id="@+id/tableRow3">

            <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="0"
                    android:id="@+id/zero"
                    android:layout_weight="1" android:background="@color/white" android:textColor="@color/black"/>

            <ImageView android:layout_width="2dp" android:layout_height="fill_parent" android:id="@+id/imageView10" android:background="@color/green_light"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="C"
                    android:id="@+id/bspace"
                    android:layout_weight="1" android:background="@color/white" android:textColor="@color/black"/>

        </TableRow>
    </TableLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:background="@color/green_light">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/cancel"
                android:id="@+id/cancel"
                android:layout_gravity="left|bottom" android:layout_weight="1" android:background="@color/gray"
                android:layout_marginRight="1dp" android:textColor="@color/black"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/save"
                android:id="@+id/save"
                android:layout_gravity="bottom" android:layout_weight="1" android:background="@color/gray"
                android:layout_marginLeft="1dp" android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>
